Avoid multiple columns on mobile && prevent that the padding changes are appleid to the full screen view

--- a/frontend/src/app/components/wp-card-view/styles/wp-card-view-horizontal.sass
+++ b/frontend/src/app/components/wp-card-view/styles/wp-card-view-horizontal.sass
@@ -7,6 +7,7 @@
 
   @media only screen and (max-width: 679px)
     &.-shrink
+      grid-template-columns: 1fr
       grid-row-gap: 0
       margin-right: 0
 
